# ai-proxy

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.local.yml  compose.server.yml  pyproject.toml
deploy/grafana/: README.md
docs/: operations.md
docs/sessions/: 2026-04-11.md  2026-04-17.md
scripts/: create_api_key.py  test_all.py  test_anthropic.py  test_openai.py  test_openrouter.py  test_stream.py
src/aiproxy/: __init__.py  __main__.py  app.py  bus.py  metrics.py  pricing_seed.json  registry.py  settings.py
tests/integration/: conftest.py  test_auth_middleware.py  test_dashboard_api.py  test_dashboard_batch_strip.py  test_dashboard_config_api.py  test_dashboard_detail.py  test_dashboard_export.py  test_dashboard_keys_api.py  test_dashboard_labels.py  test_dashboard_list.py  test_dashboard_login.py  test_dashboard_pricing_api.py  test_dashboard_pricing_catalog.py  test_dashboard_replay.py  test_dashboard_stats.py  test_dashboard_timeline.py  test_dashboard_vacuum.py  test_dashboard_ws.py  test_db_migrate.py  test_end_to_end.py  test_metrics.py  test_pricing_refresher.py  test_proxy_engine.py  test_proxy_router.py  test_ws_live_follow.py
tests/unit/: conftest.py  test_bus.py  test_crud_api_keys.py  test_crud_chunks.py  test_crud_config.py  test_crud_pricing.py  test_crud_requests.py  test_crud_requests_list.py  test_dashboard_auth.py  test_db_engine.py  test_db_models.py  test_fts.py  test_headers.py  test_pricing_catalog.py  test_pricing_compute.py  test_pricing_seed.py  test_provider_anthropic.py  (+9 more)
(+39 files in other folders)
